third_party/blink/renderer/core/svg/svg_static_string_list.cc
@@ -86,6 +86,7 @@ SVGStringListTearOff* SVGStaticStringList::TearOff() {
 }
 
 SVGParsingError SVGStaticStringList::AttributeChanged(const String& value) {
+  ClearBaseValueNeedsSynchronization();
   return value_->SetValueAsString(value);
 }
 
